# oud

./: Cargo.toml  build.rs  index.html  wasm.sh
src/: assets.rs  buffer.rs  camera.rs  gui.rs  lib.rs  main.rs  model.rs  state.rs  texture.rs
src/shaders/: default.wgsl  egui.wgsl  model.wgsl  variant.wgsl
