[package]
name = "oud"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cfg-if = "1"
env_logger = "0.10"
glam = "0.22"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.2"
tobj = { version = "3.2", features = ["async"] }
winit = "0.27"
wgpu = "0.14"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
reqwest = "0.11"
wgpu = { version = "0.14", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}
